<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bvss03"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/team_a"
                        android:textAllCaps="true"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/batman_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#ffffff"
                        android:textSize="70sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:alpha="0.7"
                        android:onClick="addSixForBatman"
                        android:text="@string/touch_down" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:alpha="0.7"
                        android:onClick="addThreeForBatman"
                        android:text="@string/field_goal" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:alpha="0.7"
                        android:onClick="addTwoForBatman"
                        android:text="@string/two_points" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:alpha="0.7"
                        android:onClick="addOneForBatman"
                        android:text="@string/extra_point" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/team_b"
                        android:textAllCaps="true"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/superman_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#ffffff"
                        android:textSize="70sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:alpha="0.7"
                        android:onClick="addSixForSuperman"
                        android:text="@string/touch_down" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:alpha="0.7"
                        android:onClick="addThreeForSuperman"
                        android:text="@string/field_goal" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:alpha="0.7"
                        android:onClick="addTwoForSuperman"
                        android:text="@string/two_points" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:alpha="0.7"
                        android:onClick="addOneForSuperman"
                        android:text="@string/extra_point" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:alpha="0.7"
                    android:onClick="martha"
                    android:text="@string/reset_button" />

            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>
</ScrollView>
